2005-08-09 13:45 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridFillRingWithExisitingCellFaces) renamed from
	gridFillRingWithFaces. Try all segments before giving up.

2005-08-09 13:08 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridReconstructSplitEdgeRatio) fixed duplicate
	add of new faces to prevent non-watertight boundaries.
	* src/gridinsert.c (gridFillRingWithFaces) increased the min face
	uv area to 1.0e-16

2005-08-09 12:19 Mike Park  <mike.park@nasa.gov>

	* src/ring.c (ringAddTriangle) to test and fix bug with inconsistent
	node id's and uv values.

2005-08-09 10:08 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridReconstructSplitEdgeRatio) to continue
	debugging, set the min face uv area to 1.0e-16 and allow 29,207 to
	continue.

2005-08-09 09:32 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridReconstructSplitEdgeRatio) made an array
	of rings to include the through edge and the gap nodes in the
	subfaces.

2005-08-08 17:25 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridReconstructSplitEdgeRatio) kick out for 29,207
	* src/gridinsert.c (gridFillRingWithFaces) debug cruff, try for
	opposite node in equator.

2005-08-08 17:18 Mike Park  <mike.park@nasa.gov>

	* src/gridmetric.c (gridFaceAreaUVDirect) direct way of getting
	face area in uv space, gridFaceAreaUV calls it.

2005-08-08 11:16 Mike Park  <mike.park@nasa.gov>

	* src/ring.c (ringSegmentsContainNode) return node uv if it is in
	segment.

2005-08-06 16:31 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridReconstructSplitEdgeRatio) cleaned out old
	stuff and just use ring for managing faces.

2005-08-06 15:56 Mike Park  <mike.park@nasa.gov>

	* src/ring.c (ringTriangle) return triangle info.

2005-08-06 15:22 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridReconstructSplitEdgeRatio) fixed the
	repeat of gap0 instead of gap1 in ring init.
	* src/gridinsert.c (gridFillRingWithFaces) return NULL if face not
	in grid.
